Fix alignments and captions

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,14 +1,40 @@
+/*
+Theme Name: Tinty
+Theme URI: https://wordpress.org/themes/tiny/
+Author: Kristoffer Lorentsen
+Author URI: https://lorut.no/
+Description: Tiny is a powerful theme that doesn't get in your way.
+Version: 2.0
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Text Domain: tiny
+Tags: TODO one-column, two-columns, right-sidebar, flexible-header, accessibility-ready, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, post-formats, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready
+This theme, like WordPress, is licensed under the GPL.
+Use it to make something cool, have fun, and share what you've learned with others.
+*/
+
+
+/* Variables */
+$space: 1.5rem;
+$space-double: $space * 2;
+$space-half: $space / 2;
 
 /* Vendor stuff */
 @import 'vendor/normalize.scss';
 @import 'vendor/accessibility.scss';
-@import 'vendor/core.scss';
+@import 'modules/alignment.scss';
+
+
+
+
 
 
 /* Structure */
 html {
     box-sizing: border-box;
+    font-size: 100%; // Not really neccessary, but nice to have. Equates to 16 px.
 }
+
 *, *:before, *:after {
     box-sizing: inherit;
 }
@@ -22,9 +48,22 @@ html {
 
 
 /* Content */
+figure {
+    margin: 0;
+}
+
+/* Image caption */
+.wp-caption {
+    text-align: center;
+    .wp-caption-text {
+        font-size: 0.8em;
+        padding: 0.5em;
+    }
+}
 
 .hentry {
     
+    clear: both;
     font-family: sans-serif;
     
 
@@ -33,9 +72,7 @@ html {
         word-wrap: break-word;
     }
 
-    figure {
-        margin: 0;
-    }
+
     
     pre {
         overflow-x: auto;
@@ -49,6 +86,15 @@ html {
 
 }
 
-/* Typo graphy*/ 
+/* Typography*/ 
 
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    clear: both;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+}
